@@ -26,8 +26,9 @@ import collection.Map
 class EagerPipeExecutionResult(result: Iterator[Map[String, Any]],
                                columns: List[String],
                                state: QueryState,
-                               db: GraphDatabaseService)
-  extends PipeExecutionResult(result, columns, state) {
+                               db: GraphDatabaseService,
+                               executionPlanDescription: String)
+  extends PipeExecutionResult(result, columns, state, executionPlanDescription) {
 
   val (eagerResult,timeTaken) = super.createTimedResults
   lazy val inner = eagerResult.iterator
