@@ -21,6 +21,7 @@ package org.neo4j.cypher.internal.pipes
 
 import org.neo4j.cypher.internal.commands.NamedPath
 import org.neo4j.cypher.internal.symbols.PathType
+import org.neo4j.cypher.PlanDescription
 
 class NamedPathPipe(source: Pipe, path: NamedPath) extends Pipe {
   def createResults(state: QueryState) = {
@@ -30,9 +31,8 @@ class NamedPathPipe(source: Pipe, path: NamedPath) extends Pipe {
     })
   }
 
-//  val symbols = source.symbols.add(Identifier(path.pathName, PathType()))
   val symbols = source.symbols.add(path.pathName, PathType())
 
-  override def executionPlan(): String = source.executionPlan() + "\r\nExtractPath(" + path.pathName + " = " + path.pathPattern.mkString(", ") + ")"
-
+  override def executionPlanDescription =
+    source.executionPlanDescription.andThen("ExtractPath", "name" -> path.pathName, "patterns" -> path.pathPattern)
 }
